--- a/working_hours/Cargo.toml
+++ b/working_hours/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2018"
 [dependencies]
 chrono = "0.4"
 rocket = "0.4.5"
+rocket_contrib = "0.4.5"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
+
